<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="Home"
            android:contentDescription="@string/Home" />
        <item
            android:id="@+id/places"
            android:title="Places and Services"
            android:contentDescription="@string/Places"
            />
        <item
            android:id="@+id/nav_manage"
            android:title="Settings"
            android:contentDescription="@string/Settings"
            />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"
                android:contentDescription="@string/Share"
                />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"
                android:contentDescription="@string/Send"
                />
        </menu>
    </item>

</menu>
